--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <form id="formCifra">
             <label for="inputNumero">Cifre mensagens com o algorítmo de Cesar</label>
 
-            <label>Selecione o numero: <input type="number" id="inputNumero" min="1"></label>
+            <label>Selecione o numero: <input type="number" id="inputNumero" min="1" max="26"></label>
             <label for="check"><input type="checkbox" id="check"> Descriptografar</label>
             <label>Insira a mensagem: <input type="text" id="inputMensagem"></label>
         </form>
